feat: add style in header and main

--- a/index.html
+++ b/index.html
@@ -12,26 +12,28 @@
 <body>
 
         <header>
-            <a href="">
-                logo
+            <a href="#">
+                <div id="div-logo-image">
+                    <img src="assets/images/images/logo2.png" id="logo-image">
+                </div>
             </a>
 
             <div id="container-buttons-header">
-                <button class="button-header">item</button>
-                <button class="button-header">item</button>
-                <button class="button-header">item</button>
-                <button class="button-header">item</button>
-                <button class="button-header">item</button>
-                <button class="button-header">item</button>
+                <button class="button-header">Sobre</button>
+                <button class="button-header">Contato</button>
+                <button class="button-header">Newsletter</button>
+                <button class="button-header">FAQ</button>
+                <button class="button-header">Downloads</button>
+                <button class="button-header">Organizadores</button>
             </div>
         </header>
 
         <main>
             <div class="containers-main" id="container-main-1">
-                <div>
-                    <h1>A Digital Product Agency</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam porro nisi aperiam placeat dolorem eum voluptatem magni autem aliquam neque?</p>
-                    <button>Contact now</button>
+                <div id="container-texts-main-1">
+                    <h1>Documed</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora earum perspiciatis iste sit magnam cum necessitatibus est fugiat architecto vel debitis sequi quaerat, possimus consectetur maiores error quo explicabo ab sint nobis et id aliquam suscipit at. Magni, soluta quaerat.</p>
+                    <button id="button-contact-now">Saber mais</button>
                 </div>
                 <div id="container-images-main">
                     <div class="images-main" id="image-main-1"></div>
