feat: add clients

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 <body>
 
         <header>
-            <a href="#">
-                <div id="div-logo-image">
-                    <img src="assets/images/images/logo2.png" id="logo-image">
-                </div>
-            </a>
+            <div id="div-logo-image">
+                <img src="assets/images/images/logo2.png" id="logo-image">
+            </div>
 
             <div id="container-buttons-header">
                 <button class="button-header">Sobre</button>
@@ -30,20 +28,34 @@
 
         <main>
             <div class="containers-main" id="container-main-1">
-                <div id="container-texts-main-1">
-                    <h1>Documed</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora earum perspiciatis iste sit magnam cum necessitatibus est fugiat architecto vel debitis sequi quaerat, possimus consectetur maiores error quo explicabo ab sint nobis et id aliquam suscipit at. Magni, soluta quaerat.</p>
-                    <button id="button-contact-now">Saber mais</button>
-                </div>
-                <div id="container-images-main">
-                    <div class="images-main" id="image-main-1"></div>
-                    <div class="images-main" >
-                        <img id="image-main-2" src="assets/images/images/image.png" alt="">
+                <div id="vh">
+                    <div id="container-texts-main-1">
+                        <h1>Documed</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora earum perspiciatis iste sit magnam cum necessitatibus est fugiat architecto vel debitis sequi quaerat, possimus consectetur maiores error quo explicabo ab sint nobis et id aliquam suscipit at. Magni, soluta quaerat.</p>
+                        <button id="button-contact-now">Saber mais</button>
+                        <img src="assets/images/images/Dot Ornament.png" id="image-dot">
                     </div>
-                    <div class="images-main" id="image-main-3"></div>
+                    <div id="container-images-main-1">
+                        <div class="images-main" id="image-main-1"></div>
+                        <div class="images-main" >
+                            <img id="image-main-2" src="assets/images/images/image.jpg" alt="">
+                        </div>
+                        <div class="images-main" id="image-main-3"></div>
+                    </div>
                 </div>
             </div>
-            <div class="containers-main"></div>
+            <div class="containers-main" id="container-main-2">
+                <div id="container-texts-main-2">
+                    <h2>Nossos clientes</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Aut, fuga.</p>
+                </div>
+                <div id="container-images-main-2">
+                    <img class="images-clients" src="assets/images/images/logo-sus.png" alt="logotipo do SUS">
+                    <img class="images-clients" src="assets/images/images/logo-hapvida.png" alt="logotipo do HAPVIDA">
+                    <img class="images-clients" src="assets/images/images/logo-unimed.png" alt="logotipo da UNIMED">
+                    <img class="images-clients" src="assets/images/images/logo-sulamerica.png" alt="logotipo do SULAMERICA">
+                </div>
+            </div>
             <div class="containers-main"></div>
             <div class="containers-main"></div>
             <div class="containers-main"></div>
