Inserindo ficha de persona e o botão sua ficha no menu

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <button class="button-header">FAQ</button>
                 <button class="button-header">Downloads</button>
                 <button class="button-header">Organizadores</button>
+                <button class="button-header"><a href="suaFicha.html" target="_blank">Sua ficha</a></button>
             </div>
         </header>
 
