--- a/suaFicha.html
+++ b/suaFicha.html
@@ -16,6 +16,7 @@
     <div class="title-text">
       <h1>Sua Ficha</h1>
       <p>Seja bem-vindo(a)!</p>
+      <p><a href="index.html">voltar</a></p>
     </div>
   </Header>
   <main>
