--- a/suaFicha.html
+++ b/suaFicha.html
@@ -11,12 +11,14 @@
 <body>
   <Header class="init">
     <div id="div-logo-image">
-      <img src="assets/images/images/logo2.png" id="logo-image">
+      <a href="/index.html
+          ">
+        <img src="assets/images/images/logo2.png" id="logo-image">
+      </a>
     </div>
     <div class="title-text">
       <h1>Sua Ficha</h1>
       <p>Seja bem-vindo(a)!</p>
-      <p><a href="index.html">voltar</a></p>
     </div>
   </Header>
   <main>
